--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,9 +42,9 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "19.0.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.56.2",
     "react-resizable-panels": "^3.0.1",
     "react-router-dom": "^7.5.1",
@@ -55,6 +55,10 @@
     "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
     "zod": "^3.24.4"
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2"
+
+
   },
   "scripts": {
     "start": "craco start",
