--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,7 +54,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
     "ajv": "6.12.6",
     "ajv-keywords": "3.5.2"
 
